--- a/Programming/Shaders/UE4 Shaders Ben Cloward/1. What is a Shader.md
+++ b/Programming/Shaders/UE4 Shaders Ben Cloward/1. What is a Shader.md
@@ -13,26 +13,8 @@
 ### Shaders before vs now
 
 #### Shaders before
-![[Pasted image 20221107211525.png]]
+![[ShaderProperties.png]]
 
 #### Shaders now
 - Now shaders only do the "Surface Properties"
 - The engine does the lighting
-
-### Unreal Material Editor
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
